--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <div class="col-md-3"><div class="hobby-card"><div class="hobby-icon">🏏</div>Playing Cricket</div></div>
         <div class="col-md-3"><div class="hobby-card"><div class="hobby-icon">🌍</div>Traveling</div></div>
         <div class="col-md-3"><div class="hobby-card"><div class="hobby-icon">🎶</div>Listening Music</div></div>
-        <div class="col-md-3"><div class="hobby-card"><div class="hobby-icon">📚</div>Reading Books</div></div>
+        <div class="col-md-3"><div class="hobby-card"><div class="hobby-icon">🎹</div>Playing Piano</div></div>
       </div>
     </section>
     <hr>
@@ -249,3 +249,4 @@
   </div>
 </body>
 </html>
+
